Fix proper visibility

--- a/task_1.8/css/header.css
+++ b/task_1.8/css/header.css
@@ -43,52 +43,6 @@
   transition: transform 0.5s ease-out;
 }
 
-.sliding-nav_menu {
-  position: absolute;
-  display: flex;
-  opacity: 1;
-  flex-direction: column;
-  gap: 5px;
-  top: 100px;
-  left: 0px;
-  width: 100%;
-  text-align: center;
-}
-.sliding-nav_menu .nav_item {
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.sliding-nav {
-  height: 290px;
-}
-.sliding-nav .menu_opener {
-  transform: rotate(180deg);
-}
-.sliding-nav::after {
-  content: "";
-  display: block;
-  position: fixed;
-  top: 290px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  opacity: 0.9;
-  animation: sliding 0.5s ease-out;
-  transition: all 0.5s ease-out;
-}
-
-@keyframes sliding {
-  0% {
-    top: 60px;
-  }
-  100% {
-    top: 290px;
-  }
-}
 .header_content {
   margin-right: 400px;
   display: flex;
