--- a/task_1.8/css/responsive.scss
+++ b/task_1.8/css/responsive.scss
@@ -132,7 +132,6 @@
     }
     .nav_menu {
         display: none;
-        transition: opacity 0.5s ease-out;
     }
     .download_phones-pic {
         width: 355px;
@@ -211,4 +210,51 @@
             background: url(../images/app-store-responsive.png);
         }
     }
+}
+
+
+
+.sliding-nav_menu {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    top: 100px;
+    left: 0px;
+    width: 100%;
+    text-align: center;
+    
+    .nav_item {
+        height: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.sliding-nav {
+    height: 290px;
+    
+    .menu_opener {
+        transform: rotate(180deg);
+    }
+    
+    &::after {
+        content: '';
+        display: block;
+        position: fixed;
+        top: 290px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        opacity: 0.9;
+        animation: sliding 0.5s ease-out;
+        transition: all 0.5s ease-out;
+    }
+}
+
+@keyframes sliding {
+    0%   {top: 60px;}
+    100% {top: 290px;}
 }
